Fixed bug where ascii-container became too wide intermittently

--- a/src/styles/ascii.css
+++ b/src/styles/ascii.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   overflow: hidden;
-  width: 100vw;
+  width: 99vw;
   height: 130vh;
 }
 
